charts/kafka-ui/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-ui
spec:
  replicas: 1
  serviceName: kafka-ui
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
