charts/kafka-ui/gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1beta1
metadata:
  name: kafka-ui-gw
spec:
  servers:
    - hosts:
        - kafka.ops.cluster.yanychoi.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: kafka-ui-tls
        mode: SIMPLE
    - hosts:
        - kafka.ops.cluster.yanychoi.com
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    app: istio-ingressgateway
